# fabric-model-readiness

./: .gitignore  .mcp.json  CLAUDE.md  Power BI Standards.md  README.md  build.ps1
.github/workflows/: pages.yml
.history/: Big_Bulky_Co_Model.json
app/: dev.ps1  electron-builder.yml  launch.bat  package-lock.json  package.json  tailwind.config.js
app/electron/: dev.ts  main.ts  preload.ts  python.ts  tsconfig.json
app/fabric-model-readiness/: .env.example  pyinstaller.spec
app/frontend/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/src/: App.tsx  vite-env.d.ts
fabric-model-readiness/: .gitignore  pyproject.toml
fabric-model-readiness/.history/: _Users_RRoberson_OneDrive_-_MSNPath_Documents_Dashboard_Drafts_CoL_Training_Big_+_Bulky_Co_Model.SemanticModel.json
fabric-model-readiness/findings/Big__Bulky_Co_Model/: latest.json
fabric-model-readiness/src/api/: server.py
fabric-model-readiness/src/api/routes/: enforcer.py  historian.py  scout.py
fabric-model-readiness/src/enforcer/: presenter.py
fabric-model-readiness/src/historian/: logger.py  reporter.py
fabric-model-readiness/src/scout/: cli.py  report.py
fabric-model-readiness/src/scout/rules/: __init__.py  data_types.py  measures.py  metadata.py
fabric-model-readiness/src/shared/: config.py  model.py
fabric-model-readiness/tests/test_scout_rules/: test_schema_design.py
findings/Big_Bulky_Co_Model/: latest.json
reports/Big_Bulky_Co_Model/: 2026-02-20-enforcer-c3a7f1e2.md  (+3 more)
(+81 files in other folders)
